[package]
name = "blc"
description = "blc, a simple http(s) checker for broken links"
authors = ["Ruud van Vliet <ruud@vliet.io>"]
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
reqwest = "0.11"
select = "*"
regex = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

