[package]
name = "blc"
description = "blc, a simple http(s) checker for broken links"
authors = ["Ruud van Vliet <ruud@vliet.io>"]
version = "0.4.0-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
reqwest = "0.13.1"
select = "0.6"
regex = "1.10"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
url = "2.5"
chrono = "0.4.38"
env_logger = "0.11"
log = "0.4"
rand = "0.9.2"


